--- a/Vidly/Views/Customer/Index.cshtml
+++ b/Vidly/Views/Customer/Index.cshtml
@@ -9,6 +9,7 @@
     <thead>
     <tr>
         <th>Customer</th>
+        <th>Discount Rate</th>
     </tr>    
     </thead>
 
@@ -24,6 +25,7 @@
         {
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Details", "Customer", new { id = customer.Id }, null)</td>
+                <td>@customer.MembershipType.DiscountRate%</td>
             </tr>
         }
 
