--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -1,18 +1,20 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top">
+﻿<div class="navbar navbar-light navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+            @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>*@
             @Html.ActionLink("Vidly", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Customers", "Index", "Customer")
+            @Html.ActionLink("Movies", "Index", "Movies")
         </div>
-        <div class="navbar-collapse collapse">
+        @*<div class="navbar-collapse">
         <ul class="nav navbar-nav">
             <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
             <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
         </ul>
         </div>
-        </div>
+        </div>*@
     </div>
