--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -1,20 +1,21 @@
-﻿<div class="navbar navbar-light navbar-fixed-top">
+﻿
+<nav class="navbar navbar-expand-sm navbar-light fixed-top bg-light">
     <div class="container">
-        <div class="navbar-header">
-            @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>*@
-            @Html.ActionLink("Vidly", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            @Html.ActionLink("Customers", "Index", "Customer")
-            @Html.ActionLink("Movies", "Index", "Movies")
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        @Html.ActionLink("Vidly", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        <div class="navbar-collapse collapse" id="navbarSupportedContent">
+            <ul class="nav navbar-nav mr-auto">
+                <li class="nav-item">@Html.ActionLink("Customers", "Index", "Customer", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Movies", "Index", "Movies", null, new { @class = "nav-link" })</li>
+            </ul>
+
+            @*<ul class="nav navbar-nav navbar-right mr-auto">
+            <li class="nav-item"><a href="/Account/Register" id="registerLink" class="nav-link">Register</a></li>
+            <li class="nav-item"><a href="/Account/Login" id="loginLink" class="nav-link">Log in</a></li>
+            </ul>*@
+
         </div>
-        @*<div class="navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
-            <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
-        </ul>
-        </div>*@
     </div>
-</div>
+</nav>
