--- a/Vidly/Views/Movie/Index.cshtml
+++ b/Vidly/Views/Movie/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Vidly.Models.Movie>
 
 @{
-    ViewBag.Title = "Movies";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2 class>Movies</h2>
 <div>
-    @Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("New Movie", "New", "Movie", null, new { @class = "btn btn-primary" })
 </div>
 <br />
 
@@ -23,7 +23,7 @@
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new { id = movie.Id }, null)</td>
+                <td>@Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
                 <td>@movie.MovieGenre.Genre</td>
             </tr>
         }
