--- a/Vidly/Views/Movie/MovieForm.cshtml
+++ b/Vidly/Views/Movie/MovieForm.cshtml
@@ -8,7 +8,7 @@
 
 <h2>@Model.Title</h2>
 
-@using (Html.BeginForm("Save", "Movies"))
+@using (Html.BeginForm("Save", "Movie"))
 {
     @Html.ValidationSummary(true, "Please fix the following errors")
 
