--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -8,7 +8,7 @@
         <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item">@Html.ActionLink("Customers", "Index", "Customer", null, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Movies", "Index", "Movies", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Movies", "Index", "Movie", null, new { @class = "nav-link" })</li>
             </ul>
 
             @*<ul class="nav navbar-nav navbar-right mr-auto">
