--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -7,7 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                @*<a class="nav-link" href="#">Link</a>*@
+                @Html.ActionLink("New Rental", "New", "Rentals", null, new { @class = "nav-link" })
+            </li>
+            <li class="nav-item">
                 @Html.ActionLink("Customers", "Index", "Customer", null, new { @class = "nav-link" })
             </li>
             <li>
